improving message feedback when detecting attribute that cannot be used
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@10607 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: b4f1405ad6c648695682f1bfbcd674a74b91576b